--- a/api.csproj
+++ b/api.csproj
@@ -7,7 +7,6 @@
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputType>Exe</OutputType>
-    <OutputPath>bin\Release</OutputPath>
     <PlatformTarget>x64</PlatformTarget>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
   </PropertyGroup>
@@ -23,6 +22,60 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Compile Include="api.cs"/>
+    <Compile Include="enu.cs"/>
+    <Compile Include="util.cs"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System"/>
+    <Reference Include="System.Data"/>
+    <Reference Include="System.Net.Http"/>
+    <Reference Include="System.Configuration"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Owin">
+      <HintPath>packages/Owin.1.0/lib/net40/Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin">
+      <HintPath>packages/Microsoft.Owin.4.2.2/lib/net45/Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Hosting">
+      <HintPath>packages/Microsoft.Owin.Hosting.4.2.2/lib/net45/Microsoft.Owin.Hosting.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Host.HttpListener">
+      <HintPath>packages/Microsoft.Owin.Host.HttpListener.4.2.2/lib/net45/Microsoft.Owin.Host.HttpListener.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http">
+      <HintPath>packages/Microsoft.AspNet.WebApi.Core.5.3.0/lib/net45/System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.Owin">
+      <HintPath>packages/Microsoft.AspNet.WebApi.Owin.5.3.0/lib/net45/System.Web.Http.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Formatting">
+      <HintPath>packages/Microsoft.AspNet.WebApi.Client.6.0.0/lib/netstandard2.0/System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>packages/Newtonsoft.Json.13.0.1/lib/netstandard2.0/Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json.Bson">
+      <HintPath>packages/Newtonsoft.Json.Bson.1.0.2/lib/netstandard2.0/Newtonsoft.Json.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Buffers">
+      <HintPath>packages/System.Buffers.4.5.1/lib/netstandard2.0/System.Buffers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Memory">
+      <HintPath>packages/System.Memory.4.5.5/lib/netstandard2.0/System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics.Vectors">
+      <HintPath>packages/System.Numerics.Vectors.4.5.0/lib/netstandard2.0/System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe">
+      <HintPath>packages/System.Runtime.CompilerServices.Unsafe.4.5.3/lib/netstandard2.0/System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions">
+      <HintPath>packages/System.Threading.Tasks.Extensions.4.5.4/lib/netstandard2.0/System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <Import Project="$(MSBuildToolsPath)/Microsoft.CSharp.targets"/>
