--- a/api.csproj
+++ b/api.csproj
@@ -22,6 +22,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Compile Include="api.cs"/>
+    <Compile Include="auth.cs"/>
     <Compile Include="enu.cs"/>
     <Compile Include="util.cs"/>
   </ItemGroup>
@@ -31,6 +32,7 @@
     <Reference Include="System.Data"/>
     <Reference Include="System.Net.Http"/>
     <Reference Include="System.Configuration"/>
+    <Reference Include="System.ComponentModel.DataAnnotations"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -70,11 +72,11 @@
     <Reference Include="System.Numerics.Vectors">
       <HintPath>packages/System.Numerics.Vectors.4.5.0/lib/netstandard2.0/System.Numerics.Vectors.dll</HintPath>
     </Reference>
-    <Reference Include="System.Runtime.CompilerServices.Unsafe">
-      <HintPath>packages/System.Runtime.CompilerServices.Unsafe.4.5.3/lib/netstandard2.0/System.Runtime.CompilerServices.Unsafe.dll</HintPath>
-    </Reference>
     <Reference Include="System.Threading.Tasks.Extensions">
       <HintPath>packages/System.Threading.Tasks.Extensions.4.5.4/lib/netstandard2.0/System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe">
+      <HintPath>packages/System.Runtime.CompilerServices.Unsafe.4.5.3/lib/netstandard2.0/System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
   </ItemGroup>
 
